--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,12 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <title>Hair Salon</title>
+    <title>Hair Salon Management</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Hair Salon</h1>
+        <h1>Hair Salon Management</h1>
       </div>
       <%= yield %>
     </div>
